# AI_QUADROTOR_GNSS_RESEARCH

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
configs/: safety.yaml  settings_original.json  settings_training.json  train_ppo.yaml  train_ppo_dr.yaml  train_ppo_fast.yaml  train_ppo_multienv.yaml  train_ppo_waypoint.yaml
configs/ablations/: frame_stack_1.yaml  no_dr.yaml  no_smoothness.yaml  progress_only.yaml
configs/control/: pid_gains.yaml
configs/environments/: airsim_nh.yaml  blocks.yaml
configs/rewards/: aggressive.yaml  cautious.yaml  default.yaml  waypoint.yaml
scripts/: benchmark_fps.py  check_env.py  export_onnx.py  launch_airsim_cluster.sh  run_ablations.py  run_batch_comparison.py  run_full_eval.py  run_reward_sweep.py
src/control/: __init__.py  airsim_interface.py
src/deployment/: deploy.py
src/environments/: __init__.py  airsim_env.py  rewards.py
src/evaluation/: baseline_pid.py  compare.py  evaluate.py  metrics.py  plots.py
src/safety/: __init__.py  monitor.py
src/training/: callbacks.py  env_scheduler.py  train.py
tests/: conftest.py  test_compare.py  test_domain_randomization.py  test_goal_obs.py  test_parallel_env.py  test_pid.py  test_rewards.py  test_safety.py  test_waypoint_rewards.py
